--- a/ui/views/partials/wifi.html
+++ b/ui/views/partials/wifi.html
@@ -43,7 +43,7 @@
                     <label for="ssid">SSID</label>
                 </div>
                 <div class="form-group-body">
-                    <input class="form-control input-block" type="text" placeholder="SSID" id="ssid" name="ssid" />
+                    <input class="form-control input-block text-mono" type="text" placeholder="SSID" id="ssid" name="ssid" />
                 </div>
             </div>
 
