Removed MQTT in favor of NATS, cleaned up main thanks to small refactors in Init funcs, added NATS token configuration to web UI, updated dependencies

--- a/ui/views/index.html
+++ b/ui/views/index.html
@@ -17,6 +17,9 @@
         <div class="mt-4">
             {{ template "views/partials/ethernet" . }}
         </div>
+        <div class="mt-4">
+            {{ template "views/partials/config" . }}
+        </div>
     </div>
 </body>
 </html>
