--- a/ui/views/index.html
+++ b/ui/views/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sensor</title>
-    <link rel="stylesheet" href="static/app.css">
-    <link rel="stylesheet" href="static/primer.css">
-    <script src="static/app.js"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sensor</title>
+  <link rel="stylesheet" href="static/tabler.min.css">
+  <script src="static/app.js"></script>
+  <script src="static/tabler.min.js"></script>
 </head>
+
 <body>
-    <div class="container-md mt-8">
-        <div>
-            {{ template "views/partials/wifi" . }}
-        </div>
-        <div class="mt-4">
-            {{ template "views/partials/ethernet" . }}
-        </div>
-        <div class="mt-4">
-            {{ template "views/partials/config" . }}
-        </div>
+  <div class="container-xl mt-4">
+    <div class="row row-deck">
+      <div class="col-md-6">
+        {{ template "views/partials/wifi" . }}
+      </div>
+      <div class="col-md-6 mt-4 mt-md-0">
+        {{ template "views/partials/ethernet" . }}
+      </div>
     </div>
+    <div class="mt-4">
+      {{ template "views/partials/config" . }}
+    </div>
+  </div>
 </body>
+
 </html>
