--- a/ui/views/partials/config.html
+++ b/ui/views/partials/config.html
@@ -1,28 +1,23 @@
-<div class="Box">
-    <div class="Box-header d-flex flex-items-center">
-        <div class="d-inline overflow-hidden flex-auto">
-            <div class="d-inline-block v-align-middle mr-2">
-                <span class="material-icons md-36">build</span>
-            </div>
-            <div class="d-inline-block v-align-middle">
-                <h3>Configuration</h3>
-            </div>
-        </div>
+<div class="card">
+  <div class="card-header d-flex flex-items-center">
+    <div class="d-inline-flex overflow-hidden flex-wrap align-items-center">
+      <div class="me-2">
+        <img width="32" height="32" src="static/icons/tool.svg" alt="">
+      </div>
+      <div class="d-inline-block align-middle">
+        <span class="h3">Configuration</span>
+      </div>
     </div>
-    <div class="Box-row">
-        <form id="config-form" action="/api/config" method="post" autocomplete="off">
-            <div class="form-group">
-                <div class="form-group-header">
-                    <label for="ssid">NATS Token</label>
-                </div>
-                <div class="form-group-body">
-                    <input class="form-control input-block text-mono" type="text" placeholder="{{ .config.nats.token }}" id="nats-token" name="nats-token" />
-                </div>
-            </div>
-            
-            <div class="form-actions mt-4">
-                <input class="btn btn-primary" type="submit" value="Save" />
-            </div>
-        </form>
-    </div>
+  </div>
+  <div class="card-body">
+    <form id="config-form" action="/api/config" method="post" autocomplete="off">
+      <div class="mb-3">
+        <label class="form-label" for="ssid">NATS Token</label>
+        <input class="form-control input-block font-monospace" type="text" placeholder="{{ .config.nats.token }}"
+          id="nats-token" name="nats-token" />
+      </div>
+
+      <input class="btn btn-primary" type="submit" value="Save" />
+    </form>
+  </div>
 </div>
