--- a/ui/views/partials/ethernet.html
+++ b/ui/views/partials/ethernet.html
@@ -1,33 +1,43 @@
-<div class="Box">
-    <div class="Box-header d-flex flex-items-center">
-        <div class="d-inline overflow-hidden flex-auto">
-            <div class="d-inline-block v-align-middle mr-2">
-                <span class="material-icons md-36">lan</span>
-            </div>
-            <div class="d-inline-block v-align-middle">
-                <h3>Ethernet</h3>
-            </div>
-        </div>
-        {{ if .eth.connected }}
-        <span class="State State--open mr-2">Online</span>
-        {{ else }}
-        <span class="State State--closed mr-2">Offline</span>
-        {{ end }}
+<div class="card">
+  <div class="card-header d-flex flex-items-center">
+    <div class="d-inline-flex overflow-hidden flex-wrap align-items-center align-content-center justify-content-center">
+      <div class="me-2">
+        <img width="32" height="32" src="static/icons/network.svg" alt="">
+      </div>
+      <div class="d-inline-block align-middle">
+        <span class="h3">Ethernet</span>
+      </div>
     </div>
     {{ if .eth.connected }}
-    <div class="Box-row">
-        <div>
-            <p>
-                <span class="h4">IP</span>
-                <span class="text-mono">{{ .eth.ip }}</span>
-            </p>
-        </div>
-        <div>
-            <p>
-                <span class="h4">Interface</span>
-                <span class="text-mono">{{ .eth.interface }}</span>
-            </p>
-        </div>
-    </div>
+    <span class="ms-auto status status-green">Online</span>
+    {{ else }}
+    <span class="ms-auto status status-red">Offline</span>
     {{ end }}
+  </div>
+  {{ if .eth.connected }}
+  <div class="table-responsive card-table">
+    <table class="table table-vcenter">
+      <tbody>
+        <tr>
+          <th>IP</th>
+          <td>
+            <samp>{{ .eth.ip }}</samp>
+          </td>
+        </tr>
+        <tr>
+          <th>Interface</th>
+          <td>
+            <samp>{{ .eth.interface }}</samp>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  {{ else }}
+  <div class="empty">
+    <p class="empty-subtitle text-muted">
+      No connection
+    </p>
+  </div>
+  {{ end }}
 </div>
