--- a/ui/views/index.html
+++ b/ui/views/index.html
@@ -12,8 +12,9 @@
 </head>
 
 <body>
-  <div class="container-xl mt-4">
-    <div class="row row-deck">
+  {{ template "views/partials/header" . }}
+  <div class="container-xl">
+    <div class="row row-deck mt-4">
       <div class="col-md-6">
         {{ template "views/partials/wifi" . }}
       </div>
