--- a/ui/views/index.html
+++ b/ui/views/index.html
@@ -6,9 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sensor</title>
-  <link rel="stylesheet" href="static/tabler.min.css">
-  <script src="static/app.js"></script>
-  <script src="static/tabler.min.js"></script>
+  <link rel="icon" type="image/svg+xml" href="/static/favicon.svg">
+  <link rel="stylesheet" href="/static/tabler.min.css">
+  <script src="/static/tabler.min.js"></script>
+  <script src="/static/app.js"></script>
 </head>
 
 <body>
