Added raw measurement NATS handler, moved ID generation to commons, progress on sensor command manager, fixed UI caching and compression, updated deps

--- a/ui/views/index/wifi.html
+++ b/ui/views/index/wifi.html
@@ -52,7 +52,7 @@
         <input class="form-control input-block" type="password" placeholder="Password" id="password" name="password" />
       </div>
 
-      <input class="btn btn-primary" type="submit" value="Connect" />
+      <input class="btn btn-success" type="submit" value="Connect" />
     </form>
   </div>
 </div>
