--- a/ui/views/index/config.html
+++ b/ui/views/index/config.html
@@ -17,7 +17,7 @@
           id="nats-token" name="nats-token" />
       </div>
 
-      <input class="btn btn-primary" type="submit" value="Save" />
+      <input class="btn btn-success" type="submit" value="Save" />
     </form>
   </div>
 </div>
