Configuration UI is now a code editor using CodeMirror, small layout fixes

--- a/ui/views/index.html
+++ b/ui/views/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 
-{{ template "views/partials/head" . }}
+{{ template "views/partials/head" }}
 
 <body>
   <div class="d-flex flex-column justify-content-start min-vh-100">
     {{ template "views/partials/header" . }}
-    <div class="container-xl">
-      <div class="row row-deck mt-4">
+
+    <div class="container-xl flex-grow-1">
+      <div class="row row-deck mt-2 mt-md-4">
         <div class="col-md-6">
           {{ template "views/index/wifi" . }}
         </div>
-        <div class="col-md-6 mt-4 mt-md-0">
+        <div class="col-md-6 mt-2 mt-md-0">
           {{ template "views/index/ethernet" . }}
         </div>
       </div>
-      <div class="mt-4">
+      <div class="mt-2 mt-md-3">
         {{ template "views/index/config" . }}
       </div>
     </div>
+
     {{ template "views/partials/footer" . }}
   </div>
-
-  <script src="/static/index.js"></script>
 </body>
 
 </html>
