--- a/ui/views/index/ethernet.html
+++ b/ui/views/index/ethernet.html
@@ -2,7 +2,7 @@
   <div class="card-header d-flex flex-items-center">
     <div class="d-inline-flex overflow-hidden flex-wrap align-items-center align-content-center justify-content-center">
       <div class="me-2">
-        <img width="32" height="32" src="static/icons/network.svg" alt="">
+        <img class="opacity-40" width="32" height="32" src="static/icons/network.svg" alt="">
       </div>
       <div class="d-inline-block align-middle">
         <span class="h3">Ethernet</span>
