--- a/ui/views/index/wifi.html
+++ b/ui/views/index/wifi.html
@@ -1,8 +1,8 @@
 <div class="card">
   <div class="card-header d-flex flex-items-center">
     <div class="d-inline-flex overflow-hidden flex-wrap align-items-center">
-      <div class="me-2">
-        <img width="32" height="32" src="static/icons/wifi.svg" alt="">
+      <div class="me-3">
+        <img class="opacity-40" width="32" height="32" src="static/icons/wifi.svg" alt="">
       </div>
       <div class="d-inline-block align-middle">
         <span class="h3">Wireless</span>
