--- a/ui/views/partials/head.html
+++ b/ui/views/partials/head.html
@@ -3,7 +3,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sensor</title>
+
   <link rel="icon" type="image/svg+xml" href="/static/favicon.svg">
+
   <link rel="stylesheet" href="/static/vendor/tabler.min.css">
   <script src="/static/vendor/tabler.min.js"></script>
+  
+  <link rel="stylesheet" href="/static/vendor/codemirror.min.css">
+  <link rel="stylesheet" href="/static/vendor/lint.min.css">
+  <script src="/static/vendor/codemirror.min.js"></script>
+  <script src="/static/vendor/active-line.min.js"></script>
+  <script src="/static/vendor/closebrackets.min.js"></script>
+  <script src="/static/vendor/yaml.min.js"></script>
+  <script src="/static/vendor/lint.min.js"></script>
+  <script src="/static/vendor/js-yaml.min.js"></script>
+  
+  <script src="/static/index.js" defer></script>
 </head>
